# AI-legal-assistant-v2

./: Legal assistant.py  app.py  evals.py  evaluation.py  load_panda.py  main.py  mlflow.db  pyproject.toml  requirements.txt
data/: examples_for_eval.py  urls.txt
evals/datasets/: civil_law_qa_eval.csv
evals/experiments/: 20260429-183105_naiverag.csv  20260429-184808_naiverag.csv  20260429-201328_naiverag.csv  20260430-150406_naiverag.csv
metrics/: correctness.py
my_faiss_index/: index.pkl
pages/: 1_Rà soát tài liệu.py
src/config/: config.py
src/document_ingestion/: document_processor.py
src/graph_builder/: analyzing_docs_graph_builder.py  graph_builder.py
src/node/: analyzing_docs_nodes.py  nodes.py
src/state/: analyzing_docs_state.py  rag_state.py
src/vectorstore/: vectorstore.py
