[project]
name = "ai-legal-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langgraph",
    "openai",
    "faiss-cpu",
    "pydantic",
    "beautifulsoup4",
    "requests",
    "streamlit",
    "wikipedia",
    "langchain-core",
    "langsmith",
    "langchain[openai]",
    "pypdf",
    "pymupdf",
    "streamlit[pdf]",
    "pdfplumber"
]
